ingress-examples/gcp-gce-controller/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-gce-internal
  labels:
  annotations:
    kubernetes.io/ingress.class: gce-internal # see https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#deprecated_annotation
spec:
  rules:
    - host: nginx-internal-gce.example.com
      http:
        paths:     
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
